# cmake_test

./: CMakeLists.txt  test_cmake.cpp
src/omm/OMA_FRM/: CMakeLists.txt
src/omm/OMA_FRM/include/: frame.h
src/omm/OMA_FRM/src/: framework.c
src/omm/source/aa/user/src/: aa.c
src/omm/source/lib/user/include/: omlib.h
src/omm/source/lib/user/src/: lib.c
